--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -779,7 +779,7 @@
                                           <object class="GtkImage" id="image2">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="pixbuf">data\email-32.png</property>
+                                            <property name="pixbuf">data/email-32.png</property>
                                           </object>
                                           <packing>
                                             <property name="bottom_attach">2</property>
@@ -920,7 +920,7 @@
                                           <object class="GtkImage" id="image1">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="pixbuf">data\internet-32.gif</property>
+                                            <property name="pixbuf">data/internet-32.gif</property>
                                           </object>
                                           <packing>
                                             <property name="bottom_attach">2</property>
@@ -1147,7 +1147,7 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                               <object class="GtkImage" id="user_summary_email_icon">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
-                                                <property name="pixbuf">data\email-32.png</property>
+                                                <property name="pixbuf">data/email-32.png</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">0</property>
@@ -1158,7 +1158,7 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                               <object class="GtkImage" id="user_summary_internet_icon">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
-                                                <property name="pixbuf">data\internet-32.gif</property>
+                                                <property name="pixbuf">data/internet-32.gif</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">0</property>
