--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -2593,8 +2593,30 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
       </object>
     </child>
   </object>
+  <object class="GtkWindow" id="loading_window">
+    <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Loading</property>
+    <property name="resizable">False</property>
+    <property name="modal">True</property>
+    <property name="default_width">440</property>
+    <property name="default_height">120</property>
+    <property name="type_hint">dialog</property>
+    <property name="transient_for">window1</property>
+    <signal name="destroy" handler="destroy" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
+    <child>
+      <object class="GtkLabel">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Loading remote configuration. Please wait</property>
+      </object>
+    </child>
+  </object>
   <object class="GtkWindow" id="profiles_window">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Edit Profiles</property>
     <property name="default_width">440</property>
     <property name="default_height">250</property>
     <property name="destroy_with_parent">True</property>
@@ -2814,8 +2836,10 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
   </object>
   <object class="GtkWindow" id="proxy_group_window">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Edit Proxy Group</property>
     <property name="default_width">440</property>
     <property name="default_height">250</property>
+    <property name="type_hint">dialog</property>
     <property name="transient_for">window1</property>
     <child>
       <placeholder/>
