--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -380,6 +380,14 @@
         <signal name="activate" handler="edit_proxy_group" object="chooser" swapped="no"/>
       </object>
     </child>
+    <child>
+      <object class="GtkMenuItem">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">new</property>
+        <signal name="activate" handler="new_proxy_group" swapped="no"/>
+      </object>
+    </child>
   </object>
   <object class="GtkDialog" id="dialog1">
     <property name="can_focus">False</property>
@@ -643,6 +651,14 @@
         <property name="label" translatable="yes">edit</property>
         <property name="use_underline">True</property>
         <signal name="activate" handler="edit_proxy_group" object="proxy_group" swapped="no"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">new</property>
+        <signal name="activate" handler="new_proxy_group" swapped="no"/>
       </object>
     </child>
   </object>
