--- a/data/idefixadmin.css
+++ b/data/idefixadmin.css
@@ -18,18 +18,20 @@
    background: #00ff00;
 }
 */
-
+/*
 .chosen_list {
     border: 2px #FF0000 solid;
 }
 
 #toggle_proxy_user_open_button,
 #toggle_proxy_open_button,
-#toggle_proxy_allow_button {
+#toggle_proxy_allow_button
+{
     background-image: -gtk-gradient (linear,
-    left top, left bottom,
-    from (shade (@selected_bg_color, 1.1)),
-color-stop (0.55, shade (@selected_bg_color, 1.0)),
-color-stop (0.55, shade (@selected_bg_color, 0.8)),
-to (shade (@selected_bg_color, 0.9)));
+                                     left top, left bottom,
+                                     from (shade (@selected_bg_color, 1.1)),
+                                     color-stop (0.55, shade (@selected_bg_color, 1.0)),
+                                     color-stop (0.55, shade (@selected_bg_color, 0.8)),
+                                     to (shade (@selected_bg_color, 0.9)));
 }
+*/
