--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -2229,7 +2229,7 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                             <property name="expand">False</property>
                                             <property name="fill">True</property>
                                             <property name="pack_type">end</property>
-                                            <property name="position">1</property>
+                                            <property name="position">2</property>
                                           </packing>
                                         </child>
                                       </object>
@@ -2378,53 +2378,64 @@ to all users</property>
                                 <property name="can_focus">False</property>
                                 <property name="orientation">vertical</property>
                                 <child>
-                                  <object class="GtkBox" id="box10">
+                                  <object class="GtkBox">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="halign">start</property>
-                                    <property name="valign">start</property>
                                     <child>
-                                      <object class="GtkButton" id="toggle_proxy_open_button">
-                                        <property name="name">toggle_proxy_open_button</property>
+                                      <object class="GtkBox" id="box10">
                                         <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
-                                        <signal name="clicked" handler="toggle_col12" swapped="no"/>
+                                        <property name="can_focus">False</property>
+                                        <property name="halign">start</property>
+                                        <property name="valign">start</property>
                                         <child>
-                                          <object class="GtkLabel" id="toggle_proxy_open">
+                                          <object class="GtkButton" id="toggle_proxy_open_button">
+                                            <property name="name">toggle_proxy_open_button</property>
                                             <property name="visible">True</property>
-                                            <property name="can_focus">False</property>
-                                            <property name="label" translatable="yes">List / All</property>
-                                            <property name="use_markup">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="receives_default">True</property>
+                                            <signal name="clicked" handler="toggle_col12" swapped="no"/>
+                                            <child>
+                                              <object class="GtkLabel" id="toggle_proxy_open">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">False</property>
+                                                <property name="label" translatable="yes">List / All</property>
+                                                <property name="use_markup">True</property>
+                                              </object>
+                                            </child>
                                           </object>
+                                          <packing>
+                                            <property name="expand">True</property>
+                                            <property name="fill">True</property>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkButton" id="toggle_proxy_allow_button">
+                                            <property name="name">toggle_proxy_allow_button</property>
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="receives_default">True</property>
+                                            <signal name="clicked" handler="toggle_col13_proxy" swapped="no"/>
+                                            <child>
+                                              <object class="GtkLabel" id="toggle_proxy_allow">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">False</property>
+                                                <property name="label" translatable="yes">Allow / Deny</property>
+                                                <property name="use_markup">True</property>
+                                              </object>
+                                            </child>
+                                          </object>
+                                          <packing>
+                                            <property name="expand">True</property>
+                                            <property name="fill">True</property>
+                                            <property name="position">1</property>
+                                          </packing>
                                         </child>
                                       </object>
                                       <packing>
-                                        <property name="expand">True</property>
+                                        <property name="expand">False</property>
                                         <property name="fill">True</property>
                                         <property name="position">0</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <object class="GtkButton" id="toggle_proxy_allow_button">
-                                        <property name="name">toggle_proxy_allow_button</property>
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
-                                        <signal name="clicked" handler="toggle_col13_proxy" swapped="no"/>
-                                        <child>
-                                          <object class="GtkLabel" id="toggle_proxy_allow">
-                                            <property name="visible">True</property>
-                                            <property name="can_focus">False</property>
-                                            <property name="label" translatable="yes">Allow / Deny</property>
-                                            <property name="use_markup">True</property>
-                                          </object>
-                                        </child>
-                                      </object>
-                                      <packing>
-                                        <property name="expand">True</property>
-                                        <property name="fill">True</property>
-                                        <property name="position">1</property>
                                       </packing>
                                     </child>
                                     <child>
@@ -2447,7 +2458,7 @@ to all users</property>
                                         <property name="expand">False</property>
                                         <property name="fill">True</property>
                                         <property name="pack_type">end</property>
-                                        <property name="position">2</property>
+                                        <property name="position">1</property>
                                       </packing>
                                     </child>
                                   </object>
@@ -2502,7 +2513,7 @@ to all users</property>
                                             </child>
                                           </object>
                                           <packing>
-                                            <property name="left_attach">0</property>
+                                            <property name="left_attach">1</property>
                                             <property name="top_attach">1</property>
                                           </packing>
                                         </child>
@@ -2524,7 +2535,7 @@ to all users</property>
                                             </child>
                                           </object>
                                           <packing>
-                                            <property name="left_attach">1</property>
+                                            <property name="left_attach">0</property>
                                             <property name="top_attach">1</property>
                                           </packing>
                                         </child>
@@ -2538,7 +2549,7 @@ to all users</property>
                                             </attributes>
                                           </object>
                                           <packing>
-                                            <property name="left_attach">0</property>
+                                            <property name="left_attach">1</property>
                                             <property name="top_attach">0</property>
                                           </packing>
                                         </child>
@@ -2552,7 +2563,7 @@ to all users</property>
                                             </attributes>
                                           </object>
                                           <packing>
-                                            <property name="left_attach">1</property>
+                                            <property name="left_attach">0</property>
                                             <property name="top_attach">0</property>
                                           </packing>
                                         </child>
