--- a/assistant.glade
+++ b/assistant.glade
@@ -6,8 +6,10 @@
     <property name="can_focus">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
+    <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="deletable">False</property>
+    <property name="gravity">center</property>
     <property name="use_header_bar">1</property>
     <signal name="cancel" handler="cancel" swapped="no"/>
     <signal name="close" handler="cancel" swapped="no"/>
